tests/testcases/errors/BCE0121-1.boo
"""
BCE0121-1.boo(6,16): BCE0121: 'super' is not valid in this context.
"""
class Foo:
	override def ToString():
		return super + "foo"
